--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "quantum-horizon",
   "displayName": "Quantum Horizon ",
-  "description": "🌌 A premium collection of meticulously crafted themes for VS Code. Features 7 unique themes including Cyberpunk, Aurora, Elegant, and more. Experience enhanced syntax highlighting and exceptional readability.",
-  "version": "1.3.6",
+  "description": "🌌 A premium collection of meticulously crafted themes for VS Code. Features many unique themes including Cyberpunk, Aurora, Elegant, and more. Experience enhanced syntax highlighting and exceptional readability.",
+  "version": "1.4.3",
   "publisher": "A-EDev",
   "author": {
     "name": "A-EDev",
@@ -22,7 +22,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Quantum Horizon Premium",
+        "label": "Quantum Horizon",
         "uiTheme": "vs-dark",
         "path": "./themes/quantum-horizon-color-theme.json"
       },
@@ -55,7 +55,25 @@
         "label": "Quantum Horizon Aurora",
         "uiTheme": "vs-dark",
         "path": "./themes/quantum-horizon-aurora.json"
+      },
+      {
+        "label": "Quantum Horizon Midnight",
+        "uiTheme": "vs-dark",
+        "path": "./themes/quantum-horizon-midnight.json"
+      },
+
+      {
+        "label": "Quantum Horizon Ultimate",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Ultimate.json"
+      },
+
+      {
+        "label": "Quantum Horizon Vampire",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Vampire.json"
       }
+      
     ]
   },
   "repository": {
@@ -80,7 +98,14 @@
     "vscode theme",
     "visual studio code",
     "syntax highlighting",
-    "custom theme"
+    "custom theme",
+    "dark",
+    "light",
+    "futuristic",
+    "ultimate",
+    "ultimate dark",
+    "midnight",
+    "vampire"
   ],
   "scripts": {
     "publish": "vsce publish",
