--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quantum-horizon",
   "displayName": "Quantum Horizon ",
   "description": "🌌 A premium collection of meticulously crafted themes for VS Code. Features many unique themes including Cyberpunk, Aurora, Elegant, and more. Experience enhanced syntax highlighting and exceptional readability.",
-  "version": "1.4.5",
+  "version": "1.4.7",
   "publisher": "A-EDev",
   "author": {
     "name": "A-EDev",
@@ -61,19 +61,21 @@
         "uiTheme": "vs-dark",
         "path": "./themes/quantum-horizon-midnight.json"
       },
-
       {
         "label": "Quantum Horizon Ultimate",
         "uiTheme": "vs-dark",
         "path": "./themes/Ultimate.json"
       },
-
       {
         "label": "Quantum Horizon Vampire",
         "uiTheme": "vs-dark",
         "path": "./themes/Vampire.json"
+      },
+      {
+        "label": "Quantum Horizon Bloodlust",
+        "uiTheme": "vs-dark",
+        "path": "./themes/bloodlust.json"
       }
-      
     ]
   },
   "repository": {
