--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quantum-horizon",
   "displayName": "Quantum Horizon ",
   "description": "🌌 A premium collection of meticulously crafted themes for VS Code. Features many unique themes including Cyberpunk, Aurora, Elegant, and more. Experience enhanced syntax highlighting and exceptional readability.",
-  "version": "1.4.9",
+  "version": "1.4.91",
   "publisher": "A-EDev",
   "author": {
     "name": "A-EDev",
@@ -21,6 +21,11 @@
   "icon": "assets/quantum-horizon-logo.png",
   "contributes": {
     "themes": [
+      {
+        "label": "Quantum Horizon Dark Knight",
+        "uiTheme": "vs-dark",
+        "path": "./themes/batman-knight.json"
+      },
       {
         "label": "Quantum Horizon",
         "uiTheme": "vs-dark",
@@ -107,7 +112,11 @@
     "ultimate",
     "ultimate dark",
     "midnight",
-    "vampire"
+    "vampire",
+    "batman",
+    "dark knight",
+    "gotham",
+    "superhero"
   ],
   "scripts": {
     "publish": "vsce publish",
